--- a/fishing/index.html
+++ b/fishing/index.html
@@ -89,7 +89,8 @@
         .back-button:hover { background: rgba(255,255,255,0.25); }
 
         /* Game UI */
-        #threeCanvas { position: absolute; top: 0; left: 0; z-index: 1; }
+        #threeCanvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; touch-action: none; }
+        #fightCanvas { width: 100%; height: 100%; touch-action: none; }
         .game-ui { position: absolute; top: 20px; left: 20px; z-index: 50; color: white; text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
         .instructions { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); z-index: 50; text-align: center; color: white; text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
 
@@ -739,7 +740,8 @@ function initThreeJS() {
     gameState.camera.position.set(0, -2, 5);
     gameState.camera.lookAt(0, -2, 0);
 
-    gameState.renderer = new THREE.WebGLRenderer({ canvas, antialias: true });
+    gameState.renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: false });
+    gameState.renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
     gameState.renderer.setSize(window.innerWidth, window.innerHeight);
     gameState.renderer.setClearColor(spot.clearColor);
     gameState.scene.fog = new THREE.Fog(spot.fogColor, spot.fogNear, spot.fogFar);
@@ -1266,6 +1268,8 @@ function backToGame() {
 
 // ========== Start Fishing ==========
 function startFishing() {
+    if (gameState.animationId) { cancelAnimationFrame(gameState.animationId); gameState.animationId = null; }
+    if (gameState.renderer) { gameState.renderer.dispose(); gameState.renderer = null; }
     gameState.currentScreen = 'game';
     showScreen('gameScreen');
     const config = lureConfig[gameState.selectedLure];
